--- a/FooManagement/Flows/Home/HomeView/SubViews/HomeHeaderView/HomeHeaderView.xib
+++ b/FooManagement/Flows/Home/HomeView/SubViews/HomeHeaderView/HomeHeaderView.xib
@@ -19,11 +19,11 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="176"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2vf-Hn-7uK">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2vf-Hn-7uK">
                     <rect key="frame" x="0.0" y="0.0" width="393" height="176"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cb8-ZC-ikP">
-                    <rect key="frame" x="175.66666666666666" y="77.666666666666671" width="42" height="21"/>
+                    <rect key="frame" x="175.66666666666666" y="135" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -33,9 +33,9 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="2vf-Hn-7uK" secondAttribute="trailing" id="6ez-HW-lJQ"/>
-                <constraint firstItem="Cb8-ZC-ikP" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="QAG-ce-B5I"/>
                 <constraint firstItem="Cb8-ZC-ikP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="YR0-WC-e0Y"/>
                 <constraint firstItem="2vf-Hn-7uK" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ioI-J6-Ihe"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Cb8-ZC-ikP" secondAttribute="bottom" constant="20" id="sEH-fZ-hJA"/>
                 <constraint firstAttribute="bottom" secondItem="2vf-Hn-7uK" secondAttribute="bottom" id="v7H-C5-WGF"/>
                 <constraint firstItem="2vf-Hn-7uK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="y1i-KZ-Jhg"/>
             </constraints>
