--- a/FooManagement/Flows/Home/HomeView/SubViews/TableView/OrderCell/StatusView/StatusView.xib
+++ b/FooManagement/Flows/Home/HomeView/SubViews/TableView/OrderCell/StatusView/StatusView.xib
@@ -8,14 +8,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StatusView" customModule="FooManagement" customModuleProvider="target">
-            <connections>
-                <outlet property="containerView" destination="OEb-M2-QNB" id="qzt-qz-5Ac"/>
-                <outlet property="statusLabel" destination="HA8-dx-til" id="9qH-yR-HKl"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="StatusView" customModule="FooManagement" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="90" height="26"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -41,6 +36,10 @@
                 <constraint firstAttribute="bottom" secondItem="OEb-M2-QNB" secondAttribute="bottom" id="q6o-g4-9mR"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="containerView" destination="OEb-M2-QNB" id="qYy-ea-6jH"/>
+                <outlet property="statusLabel" destination="HA8-dx-til" id="1dM-9n-hRg"/>
+            </connections>
             <point key="canvasLocation" x="112" y="21"/>
         </view>
     </objects>
